# xfiles

./: .gitignore  .travis.yml  LICENSE  LSP.markdown  README.md  encrypt.hs  hashfs.md  safe-shred.hs  stack.yaml  xfiles.cabal
Console/: Display.hs  Options.hs
Console/Options/: Flags.hs  Monad.hs  Types.hs
Data/: Buffer.hs  FileFormat.hs  Sql.hs  Stream.hs
Data/SQL/: Lexer.hs  Parse.hs  Print.hs  Types.hs
Network/: LSP.hs
Network/LSP/: Context.hs  Crypto.hs  Exception.hs  IO.hs  Record.hs  Types.hs  Wire.hs
Storage/: HashFS.hs  LockFile.hs  Utils.hs
Storage/HashFS/: Client.hs  ConfigFile.hs  Hasher.hs  IO.hs  Local.hs  Log.hs  Meta.hs  Monad.hs  Native.hs  Path.hs  Protocol.hs  ProtocolUtils.hs  Query.hs  Server.hs  Types.hs  Utils.hs
Storage/HashFS/Server/: Handler.hs  Log.hs
System/Directory/: Traverse.hs
Tools/: ChronoFs.hs  Config.hs  Quarry.hs  Utils.hs
Tools/ChronoFs/: Config.hs  Display.hs  Marshall.hs  Monad.hs  Operations.hs  Types.hs  Utils.hs
Tools/Quarry/: Cache.hs  Config.hs  DB.hs  DBHelper.hs  Monad.hs  Types.hs
Tools/Quarry/DB/: Meta.hs  Types.hs  Utils.hs
chronofs/: README.md  chronofs.cabal
chronofs/Src/: Shell.hs  ShellGlob.hs
chronofs/Tools/ChronoFs/: Config.hs  Display.hs  Marshall.hs  Monad.hs
contrib/: QuarryImport.hs
fnb/: README.md  fnb.cabal
fnb/Src/: Fnb.hs
src/: Backup.hs  CheckExtensions.hs  Encrypt.hs  FileLock.hs  HashfsCli.hs  HashfsUtils.hs  Hashfsd.hs  Quarry.hs  SafeShred.hs  Shell.hs  Stratum.hs  Unique.hs  Xdu.hs
src/Hashfs/: Common.hs
src/Stratum/: Page.hs
static/: index.html
static/css/: dashboard.css
static/js/: stratum.js
tests/: Cli.hs  FakeHandle.hs  HashfsState.hs  LSP.hs  Sql.hs  SqlStmt.hs  Tests.hs
