Name:                xfiles
Version:             0.1
Synopsis:            Xfiles
Description:         personal set of tools for backup and file manipulation
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/xfiles
Bug-reports:         https://github.com/vincenthz/xfiles/issues
Cabal-Version:       >=1.10

source-repository head
  type: git
  location: https://github.com/vincenthz/xfiles

Library
  Exposed-Modules:   Tools.ChronoFs
                   , Tools.Utils
                   , Data.FileFormat
                   , System.Directory.Traverse
                   , Console.Display
                   , Console.Options
                   , Network.LSP
  Other-modules:     Tools.ChronoFs.Marshall
                   , Tools.ChronoFs.Types
                   , Tools.ChronoFs.Monad
                   , Tools.ChronoFs.Operations
                   , Tools.ChronoFs.Config
                   , Tools.ChronoFs.Utils
                   , Tools.ChronoFs.Display
                   , Console.Options.Nid
                   , Console.Options.Flags
                   , Console.Options.Monad
                   , Console.Options.Types
                   , Console.Options.Utils
                   , Network.LSP.Types
                   , Network.LSP.Crypto
                   , Network.LSP.Context
                   , Network.LSP.Exception
                   , Network.LSP.Record
                   , Network.LSP.Wire
                   , Network.LSP.Context
                   , Network.LSP.IO
  Build-depends:     base >= 4.3 && < 5
                   , bytestring
                   , memory >= 0.8
                   , network
                   , cryptonite >= 0.9
                   , mtl
                   , system-filepath
                   , system-fileio
                   , data-default-class
                   , cereal
                   , containers
                   , hashable
                   , hashtables
                   , bytestring
                   , filepath
                   , directory
                   , terminfo
                   , transformers
                   , unix
                   , time
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-imports
  default-language:  Haskell2010

Executable           chronofs
  Main-Is:           Backup.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , xfiles
                   , system-filepath
                   , system-fileio
                   , data-default-class
                   , hashable
                   , base16-bytestring
                   , hashtables
                   , bytestring
                   , filepath
                   , directory
                   , terminfo
                   , unix
                   , time
  Buildable:         True
  default-language:  Haskell2010

Executable           chronofs-shell
  Main-Is:           Shell.hs
  hs-source-dirs:    Src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base, mtl, xfiles, data-default-class, terminfo, system-filepath, time, old-locale, regex-posix
  Buildable:         False
  default-language:  Haskell2010

Executable           safe-shred
  Main-Is:           SafeShred.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , cryptonite
                   , bytestring
                   , filepath
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010

Executable           encrypt
  Main-Is:           Encrypt.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , memory
                   , cryptonite
                   , bytestring
                   , utf8-string
                   , filepath
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010

Executable           checkexts
  Main-Is:           CheckExtensions.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , filepath
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010

Executable           xdu
  Main-Is:           Xdu.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , filepath
                   , containers
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010

Test-Suite test-lsp
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  default-language:  Haskell2010
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , network
                   , tasty
                   , tasty-quickcheck
                   , QuickCheck
                   , cryptonite
                   , bytestring
                   , xfiles
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-imports
