Name:                xfiles
Version:             0.1
Synopsis:            Xfiles
Description:         personal set of tools for backup and file manipulation
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/xfiles
Bug-reports:         https://github.com/vincenthz/xfiles/issues
Cabal-Version:       >=1.10

source-repository head
  type: git
  location: https://github.com/vincenthz/xfiles

Library
  Exposed-Modules:   Tools.ChronoFs
                   -- , Tools.Quarry
                   , Tools.Config
                   , Tools.Utils
                   , Data.FileFormat
                   , Data.Buffer
                   , Data.Sql
                   , System.Directory.Traverse
                   , Console.Display
                   , Console.Options
                   , Network.LSP
                   , Storage.HashFS
                   , Storage.HashFS.Client
                   , Storage.HashFS.Server
                   , Storage.HashFS.Protocol
                   , Storage.HashFS.Meta
                   , Storage.HashFS.Query
                   , Storage.HashFS.Log
                   , Storage.HashFS.IO
                   , Storage.HashFS.Utils
                   , Storage.LockFile
                   , Storage.Utils
  Other-modules:     Tools.ChronoFs.Marshall
                   , Tools.ChronoFs.Types
                   , Tools.ChronoFs.Monad
                   , Tools.ChronoFs.Operations
                   , Tools.ChronoFs.Config
                   , Tools.ChronoFs.Utils
                   , Tools.ChronoFs.Display
                   -- , Tools.Quarry.Monad
                   -- , Tools.Quarry.Types
                   -- , Tools.Quarry.Config
                   -- , Tools.Quarry.DB.Types
                   -- , Tools.Quarry.DB.Utils
                   -- , Tools.Quarry.DB.Meta
                   -- , Tools.Quarry.DB
                   -- , Tools.Quarry.DBHelper
                   -- , Tools.Quarry.Cache
                   , Console.Options.Nid
                   , Console.Options.Flags
                   , Console.Options.Monad
                   , Console.Options.Types
                   , Console.Options.Utils
                   , Network.LSP.Types
                   , Network.LSP.Crypto
                   , Network.LSP.Context
                   , Network.LSP.Exception
                   , Network.LSP.Record
                   , Network.LSP.Wire
                   , Network.LSP.Context
                   , Network.LSP.IO
                   , Storage.HashFS.Types
                   , Storage.HashFS.Path
                   , Storage.HashFS.Hasher
                   , Storage.HashFS.Local
                   , Storage.HashFS.Server.Handler
                   , Storage.HashFS.Server.Log
                   , Storage.HashFS.ProtocolUtils
                   , Storage.HashFS.ConfigFile
  Build-depends:     base >= 4.3 && < 5
                   , bytestring
                   , async
                   , memory >= 0.8
                   , network
                   , cryptonite >= 0.9
                   , mtl
                   , system-filepath
                   , system-fileio
                   , data-default-class
                   , cereal
                   , containers
                   , hashable
                   , hashtables
                   , utf8-string
                   , bytestring
                   , filepath
                   , directory
                   , terminfo
                   , transformers
                   , unix
                   , hourglass
                   , time
                   -- quarry
                   , convertible
                   , HDBC
                   , HDBC-sqlite3
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-imports
  default-language:  Haskell2010

Executable           chronofs
  Main-Is:           Backup.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , xfiles
                   , system-filepath
                   , system-fileio
                   , data-default-class
                   , hashable
                   , hashtables
                   , bytestring
                   , filepath
                   , directory
                   , terminfo
                   , unix
                   , time
  Buildable:         True
  default-language:  Haskell2010

Executable           chronofs-shell
  Main-Is:           Shell.hs
  hs-source-dirs:    Src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base, mtl, xfiles, data-default-class, terminfo, system-filepath, time, old-locale, regex-posix
  Buildable:         False
  default-language:  Haskell2010

Executable           safe-shred
  Main-Is:           SafeShred.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , cryptonite
                   , bytestring
                   , filepath
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010

Executable           filelock
  Main-Is:           FileLock.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , memory
                   , cryptonite
                   , bytestring
                   , utf8-string
                   , filepath
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010

Executable           checkexts
  Main-Is:           CheckExtensions.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , filepath
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010

Executable           xdu
  Main-Is:           Xdu.hs
  Other-Modules:     Paths_xfiles
  hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , xfiles
                   , filepath
                   , containers
                   , directory
                   , process
  Buildable:         True
  default-language:  Haskell2010


-- Executable           quarry
--   Main-Is:           Quarry.hs
--   Hs-Source-Dirs:    src
--   ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
--   Build-depends:     base >= 4 && < 5
--                    , mtl
--                    , process
--                    , xfiles
--   Buildable:         False
--   default-language:  Haskell2010

Executable           hashfs-cli
  Main-Is:           HashfsCli.hs
  Other-modules:     Hashfs.Common
  Hs-Source-Dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , xfiles
                   , process
                   , filepath
                   , directory
                   , network
                   , memory
                   , cryptonite
                   , bytestring
                   , utf8-string
  Buildable:         True
  default-language:  Haskell2010

Executable           hashfsd
  Main-Is:           Hashfsd.hs
  Other-modules:     Hashfs.Common
  Hs-Source-Dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports -threaded -rtsopts
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , xfiles
                   , process
                   , network
                   , hourglass
                   , memory
                   , cryptonite
                   , bytestring
                   , utf8-string
  Buildable:         True
  default-language:  Haskell2010

Executable           stratum
  Main-Is:           Stratum.hs
  Other-modules:     Stratum.Page
  Hs-Source-Dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports -threaded -rtsopts
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , xfiles
                   , process
                   , network
                   , directory
                   , filepath
                   , hourglass
                   , memory
                   , cryptonite
                   , bytestring
                   , utf8-string
                   , http-types
                   , wai
                   , warp
                   , blaze-builder
                   , blaze-html
  Buildable:         True
  default-language:  Haskell2010

Executable           hashfs-utils
  Main-Is:           HashfsUtils.hs
  Other-modules:     Hashfs.Common
  Hs-Source-Dirs:    src
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , xfiles
                   , process
                   , network
                   , hourglass
                   , memory
                   , cryptonite
                   , bytestring
                   , utf8-string
  Buildable:         True
  default-language:  Haskell2010

Executable           quarry-import
  Main-Is:           QuarryImport.hs
  Hs-Source-Dirs:    contrib
  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-imports
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , xfiles
                   , process
                   , filepath
                   , directory
                   , network
                   , memory
                   , containers
                   , cryptonite
                   , bytestring
                   , hourglass
                   , utf8-string
                   , HDBC
                   , HDBC-sqlite3
  Buildable:         True
  default-language:  Haskell2010


Test-Suite test-lsp
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           LSP.hs
  default-language:  Haskell2010
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , async
                   , memory
                   , tasty
                   , tasty-quickcheck
                   , QuickCheck
                   , cryptonite
                   , bytestring
                   , xfiles
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-imports

Test-Suite test-sql
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Sql.hs
  Other-modules:     HashfsState
  default-language:  Haskell2010
  Build-Depends:     base >= 3 && < 5
                   , tasty
                   , directory
                   , tasty-quickcheck
                   , QuickCheck
                   , cryptonite
                   , containers
                   , bytestring
                   , hourglass
                   , xfiles
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-imports

Test-Suite test-cli
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Cli.hs
  default-language:  Haskell2010
  Build-Depends:     base >= 3 && < 5
                   , tasty
                   , directory
                   , tasty-quickcheck
                   , QuickCheck
                   , xfiles
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-imports
