Name:                chronofs
Version:             0.1.0
Synopsis:            chronofs
Description:         chronofs
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Category:            Administration
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/chronofs
Cabal-Version:       >=1.8
data-files:          README.md
extra-source-files:  Tests/*.hs

Library
  Exposed-Modules:   Tools.ChronoFs
                   , Tools.ChronoFs.Marshall
                   , Tools.ChronoFs.Types
                   , Tools.ChronoFs.Monad
                   , Tools.ChronoFs.Operations
                   , Tools.ChronoFs.Config
                   , Tools.ChronoFs.Utils
                   , Tools.ChronoFs.Display
  ghc-options:       -Wall -fno-warn-orphans
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , system-filepath
                   , system-fileio
                   , data-default
                   , cereal
                   , containers
                   , hashable
                   , hashtables
                   , bytestring
                   , cryptohash
                   , filepath
                   , directory
                   , fileformat
                   , terminfo
                   , transformers
                   , base16-bytestring
                   , unix
                   , time
  Buildable: True

Executable           chronofs
  Main-Is:           Backup.hs
  hs-source-dirs:    Src
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , chronofs
                   , system-filepath
                   , system-fileio
                   , data-default
                   , hashable
                   , base16-bytestring
                   , hashtables
                   , bytestring
                   , filepath
                   , directory
                   , fileformat
                   , terminfo
                   , unix
                   , time
  Buildable: True

Executable           chronofs-shell
  Main-Is:           Shell.hs
  hs-source-dirs:    Src
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  Build-depends:     base, mtl, chronofs, simple-readline, data-default, terminfo, system-filepath, time, old-locale, regex-posix
  Buildable: True
